fix(Modal): increase modal tooltip z-index (#6757)

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -358,6 +358,10 @@
   .#{$prefix}--body--with-modal-open {
     overflow: hidden;
   }
+
+  .#{$prefix}--body--with-modal-open .#{$prefix}--tooltip {
+    z-index: z('modal');
+  }
 }
 
 @include exports('modal') {
